# smithing

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: browser-tile-feasibility.md  code-editor-tile-scope.md  extensibility-research-plan.md  extensibility.md  extension-definitions.md  extension-discovery-and-reload.md  fluidity-extensions-skill.md  integration-catalog-seams.md  settings-view.md  stable-release-scope.md
docs/adr/: 0001-persist-workspace-structure-not-runtime-state.md  0002-tool-tiles-are-distinct-from-terminal-tiles.md  0003-rust-owns-tool-resume-launch.md  0004-shared-integration-catalog-with-adapters.md  0005-git-worktrees-live-in-app-data.md  0006-app-wide-workspace-stack.md
docs/examples/extensions/: README.md
src/: App.tsx  BrailleSpinner.tsx  CodeEditorTile.tsx  DiffTile.tsx  KeyCap.tsx  KeyboardShortcutsSettings.tsx  NotepadTile.tsx  Picker.tsx  ScrollArea.tsx  SettingsModal.tsx  SettingsView.tsx  Slider.tsx  TerminalTile.tsx  TilePickerSettings.tsx  ToastStack.tsx  Toggle.tsx  WorkspaceTile.tsx  appConstants.ts  applicationClient.ts  commands.ts  commandsManifest.json  diffClient.ts  main.tsx  markdownTaskLists.ts  projectClient.ts  settings.ts  styles.css  terminalClient.ts  terminalSessionRuntime.ts  tileDefinitions.ts  tileLayout.ts  tilePickerCatalog.tsx  types.ts  updateClient.ts  workspaceClient.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: extension_catalog.rs  lib.rs  main.rs  terminal_session_runtime.rs  tile_definition.rs
src/shared/: integrationCatalog.json
(+3 files in other folders)
