[package]
name = "fluidity"
version = "0.1.0"
description = "Fluidity desktop application"
authors = ["Owen Smith"]
edition = "2021"

[lib]
name = "fluidity_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
portable-pty = "0.9"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
