[package]
name = "fluidity"
version = "0.0.2"
description = "Fluidity desktop application"
authors = ["Owen Smith"]
edition = "2021"

[lib]
name = "fluidity_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
portable-pty = "0.9"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
